# nix-s3-generations

./: .gitignore  Cargo.toml  LICENSE  README.md  action.yml  flake.nix  package-lock.json  package.json  tsconfig.json
.github/: renovate.json
.github/workflows/: ci.yml  gc.yml
action/: binary-download.ts  binary-resolve.ts  gc-index.ts  helpers.ts  index.ts  state.ts
action/__tests__/: binary-download.test.ts  nix-conf.test.ts  phase-detection.test.ts  state-passing.test.ts
gc/: action.yml
src/: check.rs  coordination.rs  forget.rs  generation.rs  main.rs  narinfo.rs  nix.rs  prune.rs  push.rs  s3.rs  s3_keys.rs
