[package]
name = "nix-s3-generations"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
aws-sdk-s3 = "1"
aws-config = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
async-stream = "0.3.6"

[dev-dependencies]
aws-smithy-http-client = { version = "1", features = ["test-util"] }
aws-smithy-types = "1"
http = "1"
tempfile = "3"
